<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TimerSetupActivity" >

    <LinearLayout
        android:id="@+id/timer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/control_vertical_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/timerText"
            style="@style/ExtraLargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/placeholder"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_calculation_loading_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/control_vertical_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/location_calculation_spinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/location_calculation_spinner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/outside_loading"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/control_vertical_margin"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vessel_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/vessel_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:entries="@array/vessel_array"
            android:prompt="@string/vessel_prompt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/how_many_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/control_vertical_margin"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/countdown_text_hour_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beverage_count_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/how_many_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:entries="@array/beverage_count_array"
            android:prompt="@string/beverage_count_prompt" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/min_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="140C"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.mkthings.ui.control.DiscreteSeekBar
            android:id="@+id/temperature_seek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/min_temperature"
            android:layout_toRightOf="@+id/max_temperature" />

        <TextView
            android:id="@+id/max_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="00C"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <TextView
        android:id="@+id/temperature_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/control_vertical_margin"
        android:lines="4"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/control_vertical_margin"
        android:gravity="fill_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/startTimerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_timer" />
    </LinearLayout>

</LinearLayout>